# r-toolkit

./: .gitignore  .opencodeignore  AGENTS.md  APP_STYLE.md  CLAUDE.md  PLAN.md  components.json  package.json  research_dash.md  roadmap.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/generator/: arc.rs  arrow.rs  mod.rs  slider.rs
src/components/composer/: ComposerToolbar.tsx  ComposerTopBar.tsx  Explorer.tsx  HistoryPanel.tsx  HotkeysPanel.tsx  Inspector.tsx  ZoomToolbar.tsx
src/components/dashboard/: BulkActionsBar.tsx  CreateProjectModal.tsx  Pagination.tsx  RecentProjects.tsx  ToolsSection.tsx  WorkspaceMetaModal.tsx
src/components/gauges/: GaugeCanvas.tsx  GaugeExplorer.tsx  GaugeInspector.tsx
src/components/layout/: LayoutRenderer.tsx  SettingsModal.tsx
src/components/modals/: EditBackgroundModal.tsx  LayoutManagerModal.tsx
src/components/ui/: ConfirmModal.tsx  UpdateDialog.tsx  action-icon.tsx  back-button.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  (+7 more)
src/hooks/: useExplorerHotkeys.ts  useSelection.ts
src/lib/: imageCache.ts  updater.ts  utils.ts
src/store/: useAppStore.ts  useCanvasStore.ts  useGaugeStore.ts  useHistory.ts  useProjectStore.ts
src/types/: gauges.ts  project.ts
src/views/: ComposerView.tsx  DashboardView.tsx  DitherView.tsx  GaugeComposerView.tsx
~/.tauri/: g-kit.key  g-kit.key.pub
(+37 files in other folders)
