[package]
name = "ResourceToolkit"
version = "0.2.2"
description = "Resource toolkit"
authors = ["Eugene Bobrov"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
image = "0.24"
walkdir = "2"
rayon = "1.8"
tauri-plugin-store = "2"
tauri-plugin-fs = "2.0.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
